lib_LTLIBRARIES = libpicdb.la
#noinst_LTLIBRARIES = libpicdb.la
libpicdb_la_SOURCES = exception.cc logger.cc memorymanager.cc warning.cc xml.cc xmllogstream.cc picdb_init.cc os.cc filelist.cc config.cc unixos.cc backend.cc filedata.cc media.cc
#config.cc backend.cc
#libpicdb_la_LDFLAGS = -version-info 3:12:1
#libpicdb_la_LDFLAGS = -version-info 5:24:2 #is 3.2.34
#libpicdb_la_LDFLAGS = -version-info 19:99:5 #is 14.5.99
#copmlete version is: [0-2].2.1
